[risk=low][RW-11681][RW-11801] Dataset Export for SAS (#8424)
* rm kernelType